--- a/modeling/modeling.ipynb
+++ b/modeling/modeling.ipynb
@@ -2,89 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "from transformers import BertTokenizer, BertForSequenceClassification\n",
-    "import torch.nn.functional as F"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Python\\Python311\\Lib\\site-packages\\huggingface_hub\\file_download.py:148: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\HP657\\.cache\\huggingface\\hub\\models--kykim--bert-kor-base. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at kykim/bert-kor-base and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model_name = \"kykim/bert-kor-base\"\n",
-    "model = BertForSequenceClassification.from_pretrained(model_name, num_labels=2)\n",
-    "tokenizer = BertTokenizer.from_pretrained(model_name)"
+    "df1 = pd.read_excel(\"Training.xlsx\")\n",
+    "df2 = pd.read_excel(\"Validation.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def classify_emotion(text):\n",
-    "    # 텍스트 토큰화 및 패딩\n",
-    "    tokens = tokenizer(text, padding=True, truncation=True, return_tensors=\"pt\")\n",
+    "df1.drop([\"연령\", \"성별\", \"신체질환\", \"상황키워드\", \"감정_소분류\",  \"시스템문장1\", \"시스템문장2\", \"시스템문장3\"], axis=1, inplace=True)\n",
+    "df2.drop([\"연령\", \"성별\", \"신체질환\", \"상황키워드\", \"감정_소분류\",  \"시스템문장1\", \"시스템문장2\", \"시스템문장3\"], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.rename(columns={\"사람문장1\" : \"sentence\"}, inplace=True)\n",
+    "df1.rename(columns={'감정_대분류': 'Emotion'}, inplace=True)\n",
     "\n",
-    "    # 예측 수행\n",
-    "    with torch.no_grad():\n",
-    "        prediction = model(**tokens)\n",
-    "\n",
-    "\t\t# 예측 결과를 바탕으로 감정 출력\n",
-    "    prediction = F.softmax(prediction.logits, dim=1)\n",
-    "    output = prediction.argmax(dim=1).item()\n",
-    "    labels = [\"부정적\", \"긍정적\"]\n",
-    "    print(f'[{labels[output]}]')\n",
-    "    print(prediction)\n",
-    "    print(output)"
+    "df2.rename(columns={\"사람문장1\" : \"sentence\"}, inplace=True)\n",
+    "df2.rename(columns={'감정_대분류': 'Emotion'}, inplace=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_sentence():\n",
-    "    input_sentence = input('문장을 입력해 주세요: ')\n",
-    "    classify_emotion(input_sentence)"
+    "df_train = pd.concat([\n",
+    "    df1[['Emotion', 'sentence']],\n",
+    "    df1[['Emotion', '사람문장2']].rename(columns={'사람문장2': 'sentence'}),\n",
+    "    df1[['Emotion', '사람문장3']].rename(columns={'사람문장3': 'sentence'})\n",
+    "], ignore_index=True)\n",
+    "\n",
+    "df_valid = pd.concat([\n",
+    "    df2[['Emotion', 'sentence']],\n",
+    "    df2[['Emotion', '사람문장2']].rename(columns={'사람문장2': 'sentence'}),\n",
+    "    df2[['Emotion', '사람문장3']].rename(columns={'사람문장3': 'sentence'})\n",
+    "], ignore_index=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[긍정적]\n",
-      "tensor([[0.4191, 0.5809]])\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "predict_sentence()"
+    "df_train = df_train.dropna()\n",
+    "df_valid = df_valid.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train.to_csv(\"training_data.csv\", index=False)\n",
+    "df_valid.to_csv(\"validation_data.csv\", index=False)"
    ]
   },
   {
