--- a/modeling/modeling.ipynb
+++ b/modeling/modeling.ipynb
@@ -83,6 +83,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = pd.read_csv(\"training_data.csv\")\n",
+    "df_valid = pd.read_csv(\"validation_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "removing_non_korean: 100%|██████████| 145955/145955 [00:13<00:00, 10514.31it/s]\n",
+      "removing_non_korean: 100%|██████████| 17968/17968 [00:01<00:00, 10546.64it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "def removing_non_korean(df):\n",
+    "    for idx, row in tqdm(df.iterrows(), desc='removing_non_korean', total=len(df)):\n",
+    "        new_doc = re.sub('[^가-힣]', ' ', row['sentence']).strip()\n",
+    "        df.loc[idx, 'sentence'] = new_doc\n",
+    "    return df\n",
+    "\n",
+    "train = removing_non_korean(df_train)\n",
+    "test = removing_non_korean(df_valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models.word2vec import Word2Vec\n",
+    "from konlpy.tag import Okt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "okt = Okt()\n",
+    "\n",
+    "temp = []\n",
+    "for i in train['sentence']:\n",
+    "    temp.append(okt.morphs(i))\n",
+    "    \n",
+    "temp = pd.Series(temp)\n",
+    "train['token'] = temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 145955 entries, 0 to 145954\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column    Non-Null Count   Dtype \n",
+      "---  ------    --------------   ----- \n",
+      " 0   Emotion   145955 non-null  object\n",
+      " 1   sentence  145955 non-null  object\n",
+      " 2   token     145955 non-null  object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 3.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train.to_csv(\"training_data-token.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
