SVM 모델링 및 검증 코드

--- a/modeling/modeling.ipynb
+++ b/modeling/modeling.ipynb
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "['word_model.joblib']"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,10 +272,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_sent_embedding(model, embedding_size, tokenized_words):\n",
+    "    feature_vec = np.zeros((embedding_size,), dtype=\"float32\")\n",
+    "    n_words = 0\n",
+    "    for word in tokenized_words:\n",
+    "        if word in model.wv.key_to_index:\n",
+    "            n_words += 1\n",
+    "            feature_vec = np.add(feature_vec, model.wv[word])\n",
+    "    if (n_words > 0):\n",
+    "        feature_vec = np.divide(feature_vec, n_words)\n",
+    "    return feature_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = pd.read_csv(\"training_data-token.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "from joblib import load\n",
+    "\n",
+    "model = load(\"word_model.joblib\")\n",
+    "\n",
+    "X = [get_sent_embedding(model, 1000, tokens) for tokens in df_train['token']]\n",
+    "y = df_train['Emotion']\n",
+    "\n",
+    "# SVM 분류 모델 학습\n",
+    "svm_model = SVC(kernel='linear')\n",
+    "svm_model.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from konlpy.tag import Okt\n",
+    "from gensim.models import Word2Vec\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "# Okt 형태소 분석기 초기화\n",
+    "okt = Okt()\n",
+    "\n",
+    "# 형태소 분석 함수 정의\n",
+    "def tokenize(text):\n",
+    "    return okt.morphs(text)\n",
+    "\n",
+    "# 주어진 문장\n",
+    "sentence = \"이 영화 정말 재미있었어!\"\n",
+    "\n",
+    "# 형태소로 분할\n",
+    "tokenized_sentence = tokenize(sentence)\n",
+    "\n",
+    "# Word2Vec 모델 불러오기\n",
+    "model = Word2Vec.load(\"word2vec.model\")\n",
+    "\n",
+    "# 형태소를 Word2Vec 임베딩으로 변환하는 함수 정의\n",
+    "def get_embedding(model, tokens):\n",
+    "    embeddings = [model.wv[token] for token in tokens if token in model.wv.key_to_index]\n",
+    "    if embeddings:\n",
+    "        return sum(embeddings) / len(embeddings)\n",
+    "    else:\n",
+    "        return []\n",
+    "\n",
+    "# 문장을 Word2Vec 임베딩으로 변환\n",
+    "embedding = get_embedding(model, tokenized_sentence)\n",
+    "\n",
+    "# SVM 모델 불러오기\n",
+    "svm_model = SVC(kernel='linear')\n",
+    "svm_model.load(\"svm_model.joblib\")\n",
+    "\n",
+    "# 감정 분류\n",
+    "emotion = svm_model.predict([embedding])[0]\n",
+    "\n",
+    "print(\"입력 문장:\", sentence)\n",
+    "print(\"예측된 감정:\", emotion)\n"
+   ]
   }
  ],
  "metadata": {
