시간이 너무 오래걸린 관계로 tensor로 gpu로 돌려볼 코드 적어둠 주말에 집에서 돌려야지

--- a/modeling/modeling.ipynb
+++ b/modeling/modeling.ipynb
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,9 +302,65 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "df_train = pd.read_csv(\"training_data-token.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from joblib import load, dump\n",
+    "import numpy as np\n",
+    "\n",
+    "# Load word_model.joblib\n",
+    "model = load(\"word_model.joblib\")\n",
+    "\n",
+    "# Prepare data\n",
+    "X_train = np.array([get_sent_embedding(model, 1000, tokens) for tokens in df_train['token']])\n",
+    "y_train = df_train['Emotion']\n",
+    "\n",
+    "# Convert labels to one-hot encoding\n",
+    "num_classes = len(np.unique(y_train))\n",
+    "y_train_one_hot = tf.keras.utils.to_categorical(y_train, num_classes)\n",
+    "\n",
+    "# Convert data to TensorFlow tensors\n",
+    "X_train_tf = tf.convert_to_tensor(X_train, dtype=tf.float32)\n",
+    "y_train_tf = tf.convert_to_tensor(y_train_one_hot, dtype=tf.float32)\n",
+    "\n",
+    "# Define SVM model using TensorFlow\n",
+    "svm_model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Input(shape=(X_train.shape[1],)),  # Input layer\n",
+    "    tf.keras.layers.Dense(units=num_classes, activation='softmax')  # SVM with softmax activation for multiclass classification\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "svm_model.compile(optimizer='sgd', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Train the model\n",
+    "svm_model.fit(X_train_tf, y_train_tf, epochs=100, batch_size=32)\n",
+    "\n",
+    "# Save the trained model\n",
+    "svm_model.save(\"svm_model_tensorflow\")\n",
+    "\n",
+    "dump(svm_model, 'svm_model.joblib')"
    ]
   },
   {
@@ -314,8 +370,7 @@
    "outputs": [],
    "source": [
     "from sklearn.svm import SVC\n",
-    "from joblib import load\n",
-    "\n",
+    "from joblib import load, dump\n",
     "model = load(\"word_model.joblib\")\n",
     "\n",
     "X = [get_sent_embedding(model, 1000, tokens) for tokens in df_train['token']]\n",
@@ -323,7 +378,8 @@
     "\n",
     "# SVM 분류 모델 학습\n",
     "svm_model = SVC(kernel='linear')\n",
-    "svm_model.fit(X, y)"
+    "svm_model.fit(X, y)\n",
+    "dump(svm_model, 'svm_model.joblib')"
    ]
   },
   {
@@ -391,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
