--- a/modeling/modeling.ipynb
+++ b/modeling/modeling.ipynb
@@ -342,7 +342,19 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'joblib' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m svm_model \u001b[38;5;241m=\u001b[39m SVC(kernel\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlinear\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     11\u001b[0m svm_model\u001b[38;5;241m.\u001b[39mfit(X, y)\n\u001b[1;32m---> 12\u001b[0m \u001b[43mjoblib\u001b[49m\u001b[38;5;241m.\u001b[39mdump(svm_model, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msvm_model.joblib\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'joblib' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.svm import SVC\n",
     "from joblib import load\n",
