--- a/modeling/modeling.ipynb
+++ b/modeling/modeling.ipynb
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -350,14 +350,14 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m svm_model \u001b[38;5;241m=\u001b[39m SVC(kernel\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlinear\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     11\u001b[0m svm_model\u001b[38;5;241m.\u001b[39mfit(X, y)\n\u001b[1;32m---> 12\u001b[0m \u001b[43mjoblib\u001b[49m\u001b[38;5;241m.\u001b[39mdump(svm_model, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msvm_model.joblib\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[9], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m svm_model \u001b[38;5;241m=\u001b[39m SVC(kernel\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlinear\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     11\u001b[0m svm_model\u001b[38;5;241m.\u001b[39mfit(X, y)\n\u001b[1;32m---> 12\u001b[0m \u001b[43mjoblib\u001b[49m\u001b[38;5;241m.\u001b[39mdump(svm_model, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msvm_model.joblib\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
       "\u001b[1;31mNameError\u001b[0m: name 'joblib' is not defined"
      ]
     }
    ],
    "source": [
     "from sklearn.svm import SVC\n",
-    "from joblib import load\n",
+    "from joblib import load, dump\n",
     "\n",
     "model = load(\"word_model.joblib\")\n",
     "\n",
@@ -367,6 +367,30 @@
     "# SVM 분류 모델 학습\n",
     "svm_model = SVC(kernel='linear')\n",
     "svm_model.fit(X, y)\n",
+    "\n",
+    "# 모델 저장\n",
+    "dump(svm_model, 'svm_model.joblib')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'joblib' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m svm_model \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mjoblib\u001b[49m\u001b[38;5;241m.\u001b[39mdump(svm_model, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msvm_model.joblib\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'joblib' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "svm_model = 1\n",
     "joblib.dump(svm_model, 'svm_model.joblib')"
    ]
   },
